# esp32-ota-firmware

./: .gitignore  CMakeLists.txt  README.md
front-end/: package-lock.json  package.json
front-end/src/: App.js
main/: CMakeLists.txt  adc_cal_us.c  adc_cal_us.h  common_header.h  gpio_user_config.c  gpio_user_config.h  main.c  mqtt_ota_connect.c  mqtt_ota_connect.h  mydata_template.h  task_handling.c  task_handling.h  wifi.c  wifi.h
